Added properties for classification and renamed for object detection

--- a/test-resources/src/main/resources/config.properties.SAMPLE
+++ b/test-resources/src/main/resources/config.properties.SAMPLE
@@ -1,8 +1,10 @@
 #COPY AND RENAME TO: DefaultConfig.properties
 sharedWorkDir=
 videoSourceDir=
-modelPath=
-labelPath=
+objectModelPath=
+objectLabelPath=
+classifyModelPath=
+classifyLabelPath=
 workerThreads=2
 debug=false
 
